--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 streamlit
-python-dotenv
 groq
-faiss-cpu
-sentence-transformers
 langchain
 langchain-community
 langchain-huggingface
+sentence-transformers
+python-dotenv
+faiss-cpu
+pypdf
+python-docx
